--- a/HurricaneDDS.vcxproj
+++ b/HurricaneDDS.vcxproj
@@ -178,6 +178,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DDSCPUUsage.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="DDSDatabaseBootstrap.h">
       <SubType>
       </SubType>
@@ -247,6 +251,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="DDSLoadBalancerMessages.refl.meta.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="DDSLoadBalancerNetworkService.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -417,6 +425,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="DDSCPUUsage.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="DDSDatabaseBootstrap.cpp">
       <SubType>
       </SubType>
@@ -460,6 +472,10 @@
     </ClCompile>
     <ClCompile Include="DDSKey.cpp" />
     <ClCompile Include="DDSLoadBalancer.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="DDSLoadBalancerNetworkService.cpp">
       <SubType>
       </SubType>
     </ClCompile>
